# ComfyUI-Q_GLB_Material_Modifier

./: README.md  __init__.py  pyproject.toml  q_glb_material_modifier.py  requirements.txt
.github/workflows/: publish.yml  registry.yml
workflows/: Hunyuan3d_20_Batch_Cropping_Emmision.json
